--- a/css/fs.css
+++ b/css/fs.css
@@ -52,7 +52,7 @@
 .bc8{background-color: #ABCDEF;}
 .bc9{background-color: #DDAADD;}
 .bc10{background-color:#FFDDAA;}
-.bc11{background-color:#F1F2F3;}
+.bc11{background-color:#C1C1C1;}
 
 .pl5{padding-left:5px;}
 .pl10{padding-left:10px;}
